T211 room edit screen fix

--- a/assets/client/src/pages/internal/containers/common/inventory/rooms/pages/room-edit/components/bed-selector/template/bed-selector.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/rooms/pages/room-edit/components/bed-selector/template/bed-selector.html
@@ -6,7 +6,7 @@
         <div *ngIf="!bedVM.accomodatesBabies" class="bed-slot-info" [title]="bedVM.bed.name">
             <span class="bed-icon unitpal-font">{{bedVM.template.iconUrl}}</span><br/>
             <small>{{bedVM.bed.name}}</small>
-            <br/> {{bedVM.capacity.maxAdults}}<span class="unitpal-font">:</span> {{bedVM.capacity.maxChildren}}
+            <br/> {{bedVM.capacity.maxNoAdults}}<span class="unitpal-font">:</span> {{bedVM.capacity.maxNoChildren}}
             <span class="unitpal-font">;</span>
         </div>
 
