--- a/assets/client/src/pages/internal/containers/common/basic-info/overview/main/template/basic-info-overview-edit.html
+++ b/assets/client/src/pages/internal/containers/common/basic-info/overview/main/template/basic-info-overview-edit.html
@@ -57,7 +57,7 @@
 			<div class="col-xs-6 col-md-3 form-group">
 				<label>{{ 'Phone' | translate }}*</label>
 				<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('phone')}">
-					<input type="text" class="form-control" ngControl="phone">
+					<input type="text" class="form-control" placeholder="e.g.: +45 XX XX XX XX" ngControl="phone">
 				</div>
 				<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter a valid phone' | translate }}</small></label>
 			</div>
