--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-overview/template/price-product-overview.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-overview/template/price-product-overview.html
@@ -6,10 +6,7 @@
 		<h1>{{priceProductVM.priceProduct.name}}</h1>
 	</div>
 	<div>
-		<i class="fa fa-home"></i> <small>{{priceProductVM.roomCategoriesString}}</small>
-	</div>
-	<div>
-		<i class="fa fa-globe"></i> <small>{{priceProductVM.availabilityString}}</small>
+		<i class="fa unitpal-font">%</i> <small>{{priceProductVM.roomCategoriesString}} / {{priceProductVM.priceBrief}}</small>
 	</div>
 	<div>
 		<i class="fa fa-credit-card"></i> <small>{{priceProductVM.priceTypeString}}</small>
@@ -18,6 +15,9 @@
 	</div>
 	<div *ngIf="!priceConfigurationIsValid()">
 		<label class="text-muted"><small><i class="fa fa-info-circle"></i> {{ 'Some prices are missing from the price product\'s configuration' | translate }}</small></label>
+	</div>
+	<div>
+		<i class="fa fa-globe"></i> <small>{{priceProductVM.availabilityString}}</small>
 	</div>
 	<div>
 		<i class="fa fa-calendar-check-o"></i> <small>{{priceProductVM.cancellationConditionsString}}</small>
