--- a/assets/client/src/pages/internal/containers/common/inventory/beds/pages/bed-overview/template/bed-overview.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/beds/pages/bed-overview/template/bed-overview.html
@@ -10,13 +10,13 @@
     </div>
     
     <div *ngIf="!accommodatesBabies">
-        <small>Accomodates {{ bedVM.bed.capacity.maxNoAdults }} <span class="unitpal-font">:</span> {{ bedVM.bed.capacity.maxNoChildren }} <span class="unitpal-font">;</span></small>
+        <small>Accomodates {{ bedVM.bed.capacity.maxNoAdults }} <span class="unitpal-font">:</span> {{ bedVM.bed.capacity.maxNoChildren }} <span class="unitpal-font">;</span> 0 <span class="unitpal-font">B</span></small>
         <br/>
         <small>Size <i class="fa fa-arrows-h"></i> {{ bedVM.bed.size.lengthCm }} <i class="fa fa-arrows-v"> {{ bedVM.bed.size.widthCm }}</i></small>
     </div>
     
     <div *ngIf="accommodatesBabies">
-        <small>Accomodates - </small>
+        <small>Accomodates 0 <span class="unitpal-font">:</span> 0 <span class="unitpal-font">;</span> 1 <span class="unitpal-font">B</span></small>
         <br/>
         <small>Size -</small>
     </div>
