--- a/assets/client/src/pages/internal/containers/common/inventory/modals/beds/template/beds-modal.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/modals/beds/template/beds-modal.html
@@ -10,11 +10,17 @@
             <div class="row">
                 <div class="col-xs-12 col-md-12 text-center">
                     <div class="btn bed-slot unselected" (click)="bedSelectionVM.numberOfInstances=bedSelectionVM.numberOfInstances+1">
-                        <div class="bed-slot-info" [title]="bedSelectionVM.bedVM.bed.name">
+                        <div *ngIf="!bedSelectionVM.bedVM.accommodatesBabies" class="bed-slot-info" [title]="bedSelectionVM.bedVM.bed.name">
                             <span class="bed-icon unitpal-font">{{bedSelectionVM.bedVM.template.iconUrl}}</span><br/>
                             <small>{{bedSelectionVM.bedVM.bed.name}}</small>
-                            <br/> {{bedSelectionVM.bedVM.capacity.maxAdults}}
-                            <span class="unitpal-font">:</span> {{bedSelectionVM.bedVM.capacity.maxChildren}}<span class="unitpal-font">;</span>
+                            <br/> 
+                            {{bedSelectionVM.bedVM.capacity.noAdults}}<span class="unitpal-font">:</span> {{bedSelectionVM.bedVM.capacity.noChildren}}<span class="unitpal-font">;</span>
+                        </div>
+                        <div *ngIf="bedSelectionVM.bedVM.accommodatesBabies" class="bed-slot-info" [title]="bedSelectionVM.bedVM.bed.name">
+                            <span class="bed-icon unitpal-font">{{bedSelectionVM.bedVM.template.iconUrl}}</span><br/>
+                            <small>{{bedSelectionVM.bedVM.bed.name}}</small>
+                            <br/>
+                            {{bedSelectionVM.bedVM.capacity.noBabies}}<span class="unitpal-font">B</span>
                         </div>
                     </div>
 
