--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/template/hotel-operations-container.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/template/hotel-operations-container.html
@@ -4,6 +4,11 @@
     		Arrivals
 		</div>
 		<div class="body">
+			<div class="arrival-item">Robert Paulsen</div>
+			<div class="arrival-item">Dorel Mihai</div>
+			<div class="arrival-item">Mircea Dinu</div>
+			<div class="arrival-item">Filip Cristian Buruiana</div>
+			<div class="arrival-item">Paraschiv Ionut</div>
 		</div>
 		<div class="footer">
 			<div class="arrivals-side-pane-bottom-box">
