--- a/views/internal.ejs
+++ b/views/internal.ejs
@@ -23,10 +23,12 @@
 
 	<!-- Custom CSS -->
 	<link href="/client/static-assets/css/unitpal.css" rel="stylesheet">
+	<link href="/client/static-assets/third-party/jquery-ui/jquery-ui.min.css" rel="stylesheet">
 
 	<!-- JS Libraries -->
 	<script src="/node_modules/jquery.1/node_modules/jquery/dist/jquery.min.js"></script>
 	<script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+	<script src="/client/static-assets/third-party/jquery-ui/jquery-ui.min.js"></script>
 
 	<!-- Angular JS Deps -->
 	<script src="/node_modules/es6-shim/es6-shim.min.js"></script>
