clean up html hotels operations

--- a/assets/client/static-assets/css/unitpal.css
+++ b/assets/client/static-assets/css/unitpal.css
@@ -1778,24 +1778,26 @@ a.btn.btn-square:focus {
  /* Operationl */
     hotel-operations-dashboard{
         width: 100%;
+        height: 100%;
+        overflow-y: hidden;
     }
-    hotel-operations-dashboard .full-height{
+    hotel-operations-dashboard{
         /*width: 1024px;*/
         display:flex;
         align-items: stretch;
     }
 
-    hotel-operations-dashboard .full-height * {
+    hotel-operations-dashboard * {
         font-family: Arial, Helvetica, sans-serif;
     }
 
     /*Change*/
-    .full-height .header{
+    hotel-operations-dashboard .header{
         height: 70px;
         border-bottom: 1px solid #DBDBDB;
     }
 
-    .arrivals-pane {
+    arrivals-pane {
         display: flex;
         background-color: #f3f3f3;
         flex-basis: 100px;
@@ -1803,7 +1805,7 @@ a.btn.btn-square:focus {
         flex-grow: 2;
     }
 
-        .arrivals-pane .header{
+        arrivals-pane .header{
             display: flex;
             align-items: center;
             border-bottom: 1px solid #DBDBDB;
@@ -1811,11 +1813,11 @@ a.btn.btn-square:focus {
             padding-left: 15px;
         }
 
-        .arrivals-pane .body{
+        arrivals-pane .body{
             flex-grow: 1;
         }
 
-        .arrivals-pane .footer{
+        arrivals-pane .footer{
             display: flex;
             justify-content: center;
             align-items: center;
@@ -1823,7 +1825,7 @@ a.btn.btn-square:focus {
             background-color: white;
         }
 
-        .arrivals-pane .footer .th-button-box{
+        arrivals-pane .footer .th-button-box{
             color: tomato;
         }
 
@@ -1838,13 +1840,13 @@ a.btn.btn-square:focus {
         background-color: white;
     }
 
-    .departures-pane{
+    departures-pane{
         background-color: #f3f3f3;
         flex-basis: 100px;
         flex-grow: 2
     }
 
-    .departures-pane .header{
+    departures-pane .header{
         display: flex;
         align-items: center;
         border-bottom: 1px solid #DBDBDB;
