--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/template/hotel-operations-dashboard.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/template/hotel-operations-dashboard.html
@@ -1,21 +1,4 @@
-<div class="full-height">
-	<div class="arrivals-pane">
-		<div class="header">
-    		Arrivals
-		</div>
-		<div class="body">
-			<div class="arrival-item">Robert Paulsen</div>
-			<div class="arrival-item">Dorel Mihai</div>
-			<div class="arrival-item">Mircea Dinu</div>
-			<div class="arrival-item">Filip Cristian Buruiana</div>
-			<div class="arrival-item">Paraschiv Ionut</div>
-		</div>
-		<div class="footer">
-			<div class="arrivals-side-pane-bottom-box">
-				<th-button [upFont]="'\''" [text]="'Booking'" (onButtonClick)="openNewBookingModal()"></th-button>
-			</div>		
-		</div>
-	</div>
+	<arrivals-pane class="full-height"></arrivals-pane>
 	<div class="canvas">
 		<div class="header">
 
@@ -58,11 +41,11 @@
 			</div>			
 		</div>
 	</div>
-	<div class="departures-pane">
+	<!--<div class="departures-pane">
 		<div class="header">
     		Departures
 		</div>
 		<div class="body">
 		</div>
-	</div>
-</div>
+	</div>-->
+	<departures-pane class="full-height"></departures-pane>
