Added more separation on HotelOperations components

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/components/arrivals-pane/template/arrivals-pane.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/components/arrivals-pane/template/arrivals-pane.html
@@ -2,11 +2,9 @@
     		Arrivals
 		</div>
 		<div class="body">
-			<div class="arrival-item">Robert Paulsen</div>
-			<div class="arrival-item">Dorel Mihai</div>
-			<div class="arrival-item">Mircea Dinu</div>
-			<div class="arrival-item">Filip Cristian Buruiana</div>
-			<div class="arrival-item">Paraschiv Ionut</div>
+			<arrival-item></arrival-item>
+			<arrival-item></arrival-item>
+			<arrival-item></arrival-item>
 		</div>
 		<div class="footer">
 			<div class="arrivals-side-pane-bottom-box">
