--- a/assets/client/src/common/utils/components/lazy-loading/template/lazy-loading-table.html
+++ b/assets/client/src/common/utils/components/lazy-loading/template/lazy-loading-table.html
@@ -109,7 +109,7 @@
 			</tr>
 		</tbody>
 
-		<tfoot>
+		<tfoot *ngIf="showTableFooter()">
 			<tr>
 				<td [ngClass]="{'left up-col-30p': !isCollapsed, 'left up-col-40p': isCollapsed}">
 					<th-button *ngIf="tableOptions.canAdd" [upFont]="'\''" [text]="'Add'" (onButtonClick)="addItem()"></th-button>
