--- a/assets/client/static-assets/css/unitpal.css
+++ b/assets/client/static-assets/css/unitpal.css
@@ -1736,7 +1736,7 @@ a.btn.btn-square:focus {
     height: 100%;
     font-size: 11px;
     overflow-y: hidden;
-    padding: 0 15px;
+    padding: 0px 15px 15px 15px;
 }
 .padding-right-0px {
     padding-right: 0px;
