--- a/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-search/template/new-booking-search.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-search/template/new-booking-search.html
@@ -2,6 +2,7 @@
 	<div class="col-xs-7 full-height right-margin booking-search-container">
 		<div class="row booking-search-inputs" customScroll>
 			<booking-search-parameters
+				[isSearching]="isSearching"
 				(onBookingSearch)="searchBookings($event)">
 			</booking-search-parameters>
 		</div>
